fixed spacing

--- a/src/app/features/home/home.page.scss
+++ b/src/app/features/home/home.page.scss
@@ -14,7 +14,7 @@ ion-page {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 1.3rem 1.25rem 0.75rem;
+  padding: calc(env(safe-area-inset-top) + 1.8rem) 1.25rem 0.75rem;
 }
 
 .hero-content {
